--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -2,20 +2,68 @@
 {% load static %}
 
 {% block content %}
-<div class="register-container">
-    <div class="register-form">
-        <h2>Register</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Register</button>
-        </form>
-        <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+    <div class="hero_bg_box">
+        <div class="img-box">
+            <img src="{% static 'images/overview.jpg' %}" alt="">
+        </div>
     </div>
-</div>
-<script src="{% static 'js/register.js' %}"></script>
+    <div class="register-container">
+        <div class="register-form">
+            <h2>Register</h2>
+            <form method="post">
+                {% csrf_token %}
+                <div>
+                    <label for="id_username">Username:</label>
+                    <input type="text" name="username" required id="id_username">
+                    {% if form.errors.username %}
+                        <ul class="errorlist">
+                            {% for error in form.errors.username %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                </div>
+                <div>
+                    <label for="id_email">Email address:</label>
+                    <input type="email" name="email" id="id_email">
+                    {% if form.errors.email %}
+                        <ul class="errorlist">
+                            {% for error in form.errors.email %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                </div>
+                <div>
+                    <label for="id_password1">Password:</label>
+                    <input type="password" name="password" required id="id_password1">
+                    {% if form.errors.password %}
+                        <ul class="errorlist">
+                            {% for error in form.errors.password %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                </div>
+                <div>
+                    <label for="id_password2">Password confirmation:</label>
+                    <input type="password" name="password2" required id="id_password2">
+                    {% if form.errors.password2 %}
+                        <ul class="errorlist">
+                            {% for error in form.errors.password2 %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                </div>
+                <button type="submit">Register</button>
+            </form>
+            <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+        </div>
+    </div>
+    <script src="{% static 'js/register.js' %}"></script>
 {% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/register.css' %}">
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
 {% endblock %}
