--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -4,51 +4,11 @@
 {% block title %}About Us{% endblock %}
 
 {% block content %}
-<div class="hero_area">
-    <header class="header_section">
-        <div class="header_bottom">
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-lg custom_nav-container">
-                    <a class="navbar-brand" href="{% url 'home' %}">
-                        <span>
-                            Allserve Restaurant and Club
-                        </span>
-                        <span style="font-style: italic; color: rgb(194, 178, 55);">
-                            simply the best
-                        </span>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class=""></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
-                        <ul class="navbar-nav  ">
-                            <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'home' %}">Home <span
-                                        class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'about' %}"> About</a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'services' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'services' %}"> Services </a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'contact' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'contact' %}">Contact us</a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'book' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'book' %}">Book Now</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </header>
+ <div class="hero_bg_box">
+    <div class="img-box">
+        <img src="{% static 'images/overview.jpg' %}" alt="">
     </div>
-
+</div>
 <section class="about_section layout_padding">
     <div class="container">
         <div class="row">
