--- a/pages/templates/pages/book.html
+++ b/pages/templates/pages/book.html
@@ -4,60 +4,20 @@
 {% block title %}Book a Room or Service{% endblock %}
 
 {% block content %}
-<div class="hero_area">
-    <header class="header_section">
-        <div class="header_bottom">
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-lg custom_nav-container">
-                    <a class="navbar-brand" href="{% url 'home' %}">
-                        <span>
-                            Allserve Restaurant and Club
-                        </span>
-                        <span style="font-style: italic; color: rgb(194, 178, 55);">
-                            simply the best
-                        </span>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class=""></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
-                        <ul class="navbar-nav  ">
-                            <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'home' %}">Home <span
-                                        class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'about' %}"> About</a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'services' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'services' %}"> Services </a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'contact' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'contact' %}">Contact us</a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'book' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'book' %}">Book Now</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </header>
+<div class="hero_bg_box">
+    <div class="img-box">
+        <img src="{% static 'images/overview.jpg' %}" alt="">
+    </div>
 </div>
-
 <section class="book_section layout_padding">
     <div class="container">
         <div class="heading_container heading_center">
             <h2>Book a Room or Service</h2>
         </div>
-        <p>Please fill out the form below to book a room or service.</p>
         <div class="row">
             <div class="col-md-7 mx-auto">
-                <form action="#" id="bookingForm">
+                <form method="post" action="{% url 'book' %}" id="bookingForm">
+                    {% csrf_token %}
                     <div class="book_form-container">
                         <div>
                             <div>
