--- a/pages/templates/pages/contact.html
+++ b/pages/templates/pages/contact.html
@@ -4,93 +4,53 @@
 {% block title %}Contact Us{% endblock %}
 
 {% block content %}
-<div class="hero_area">
-    <header class="header_section">
-        <div class="header_bottom">
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-lg custom_nav-container">
-                    <a class="navbar-brand" href="{% url 'home' %}">
-                        <span>
-                            Allserve Restaurant and Club
-                        </span>
-                        <span style="font-style: italic; color: rgb(194, 178, 55);">
-                            simply the best
-                        </span>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class=""></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
-                        <ul class="navbar-nav  ">
-                            <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'home' %}">Home <span
-                                        class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'about' %}"> About</a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'services' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'services' %}"> Services </a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'contact' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'contact' %}">Contact us</a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'book' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'book' %}">Book Now</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
+    <div class="hero_bg_box">
+        <div class="img-box">
+            <img src="{% static 'images/overview.jpg' %}" alt="">
+        </div>
+    </div>
+    <section class="contact_section layout_padding">
+        <div class="contact_bg_box">
+            <div class="img-box">
+                <img src="{% static 'images/images.jpeg' %}" alt="">
             </div>
         </div>
-    </header>
-    </div>
-
-<section class="contact_section layout_padding">
-    <div class="contact_bg_box">
-        <div class="img-box">
-            <img src="{% static 'images/images.jpeg' %}" alt="">
-        </div>
-    </div>
-    <div class="container">
-        <div class="heading_container heading_center">
-            <h2>
-                Get In touch
-            </h2>
-        </div>
-        <div class="">
-            <div class="row">
-                <div class="col-md-7 mx-auto">
-                    <form action="#">
-                        <div class="contact_form-container">
-                            <div>
+        <div class="container">
+            <div class="heading_container heading_center">
+                <h2>
+                    Get In touch
+                </h2>
+            </div>
+            <div class="">
+                <div class="row">
+                    <div class="col-md-7 mx-auto">
+                        <form action="#">
+                            <div class="contact_form-container">
                                 <div>
-                                    <input type="text" placeholder="Full Name" />
-                                </div>
-                                <div>
-                                    <input type="email" placeholder="Email " />
-                                </div>
-                                <div>
-                                    <input type="text" placeholder="Phone Number" />
-                                </div>
-                                <div class="">
-                                    <input type="text" placeholder="Message" class="message_input" />
-                                </div>
-                                <div class="btn-box ">
-                                    <button type="submit">
-                                        Send
-                                    </button>
+                                    <div>
+                                        <input type="text" placeholder="Full Name" />
+                                    </div>
+                                    <div>
+                                        <input type="email" placeholder="Email " />
+                                    </div>
+                                    <div>
+                                        <input type="text" placeholder="Phone Number" />
+                                    </div>
+                                    <div class="">
+                                        <input type="text" placeholder="Message" class="message_input" />
+                                    </div>
+                                    <div class="btn-box ">
+                                        <button type="submit">
+                                            Send
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
 {% endblock %}
