--- a/static/css/register.css
+++ b/static/css/register.css
@@ -51,7 +51,7 @@ body {
     width: 100%;
     padding: 10px;
     background-color: #007bff;
-    color: white;
+    color: #bb7a7a;
     border: none;
     border-radius: 4px;
     cursor: pointer;
