--- a/templates/base.html
+++ b/templates/base.html
@@ -19,81 +19,85 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-      body {
-        font-family: 'Inter', sans-serif;
-      }
+        body {
+            font-family: 'Inter', sans-serif;
+        }
     </style>
     {% block extra_css %}{% endblock %}
 </head>
-<body class="sub_page"> <div class="hero_area">
-        <header class="header_section">
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-lg custom_nav-container">
-                    <a class="navbar-brand" href="{% url 'home' %}">
+<body class="sub_page">
+<div class="hero_area">
+    <header class="header_section">
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg custom_nav-container">
+                <a class="navbar-brand" href="{% url 'home' %}">
                         <span>
                             Allserve Restaurant and Club
                         </span>
-                        <span style="font-style: italic; color: rgb(194, 178, 55);">
+                    <span style="font-style: italic; color: rgb(194, 178, 55);">
                             simply the best
                         </span>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class=""></span>
-                    </button>
-                    <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
-                        <ul class="navbar-nav  ">
-                            <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'about' %}">About</a>
-                            </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'services' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'services' %}">Services</a>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class=""></span>
+                </button>
+                <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
+                    <ul class="navbar-nav  ">
+                        <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
+                            <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
+                            <a class="nav-link" href="{% url 'about' %}">About</a>
+                        </li>
+                        <li class="nav-item {% if request.resolver_match.url_name == 'services' %}active{% endif %}">
+                            <a class="nav-link" href="{% url 'services' %}">Services</a>
+                        </li>
+                        <li class="nav-item{% if request.resolver_match.url_name == 'gallery' %}active{% endif %}">
+                            <a class="nav-link" href="{% url 'gallery' %}">Gallery</a>
+                        </li>
+                        <li class="nav-item {% if request.resolver_match.url_name == 'contact' %}active{% endif %}">
+                            <a class="nav-link" href="{% url 'contact' %}">Contact us</a>
+                        </li>
+                        <li class="nav-item{% if request.resolver_match.url_name == 'book' %}active{% endif %}">
+                            <a class="nav-link" href="{% url 'book' %}">Book a service</a>
+                        </li>
+                        {% if user.is_authenticated %}
+                            <li class="nav-item {% if request.resolver_match.url_name == 'booking_list' %}active{% endif %}">
+                                <a class="nav-link" href="{% url 'booking_list' %}">My Bookings</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">Gallery</a>
+                                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                             </li>
-                            <li class="nav-item {% if request.resolver_match.url_name == 'contact' %}active{% endif %}">
-                                <a class="nav-link" href="{% url 'contact' %}">Contact us</a>
+                        {% else %}
+                            <li class="nav-item {% if request.resolver_match.url_name == 'login' %}active{% endif %}">
+                                <a class="nav-link" href="{% url 'login' %}">Login</a>
                             </li>
-                            {% if user.is_authenticated %}
-                                <li class="nav-item {% if request.resolver_match.url_name == 'booking_list' %}active{% endif %}">
-                                    <a class="nav-link" href="{% url 'booking_list' %}">My Bookings</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-                                </li>
-                            {% else %}
-                                <li class="nav-item {% if request.resolver_match.url_name == 'login' %}active{% endif %}">
-                                    <a class="nav-link" href="{% url 'login' %}">Login</a>
-                                </li>
-                                <li class="nav-item {% if request.resolver_match.url_name == 'register' %}active{% endif %}">
-                                    <a class="nav-link" href="{% url 'register' %}">Register</a>
-                                </li>
-                            {% endif %}
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </header>
-        {% if request.resolver_match.url_name == 'home' %}
-            {% block hero_content %}
-            {% endblock %}
-        {% endif %}
-    </div>
-
-    <div class="content">
-        {% block content %}
+                            <li class="nav-item {% if request.resolver_match.url_name == 'register' %}active{% endif %}">
+                                <a class="nav-link" href="{% url 'register' %}">Register</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+    {% if request.resolver_match.url_name == 'home' %}
+        {% block hero_content %}
         {% endblock %}
-    </div>
+    {% endif %}
+</div>
 
-    <section class="info_section ">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="info_logo">
-                        <a class="navbar-brand" href="{% url 'home' %}">
+<div class="content">
+    {% block content %}
+    {% endblock %}
+</div>
+
+<section class="info_section ">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="info_logo">
+                    <a class="navbar-brand" href="{% url 'home' %}">
                             <span>
                                 Allserve Restaurant
                                 <br>
@@ -101,83 +105,83 @@
                                 <br>
                                 Club
                             </span>
-                        </a>
-                        <p>
-                            All your favourite is here!
-                        </p>
-                        <span style="font-style: italic; color: rgb(194, 178, 55);">
+                    </a>
+                    <p>
+                        All your favourite is here!
+                    </p>
+                    <span style="font-style: italic; color: rgb(194, 178, 55);">
                             simply the best
                         </span>
-                    </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="info_info">
-                        <h5>
-                            Contact Us
-                        </h5>
-                    </div>
-                    <div class="info_contact">
-                        <a href="" class="">
-                            <i class="fa fa-map-marker" aria-hidden="true"></i>
-                            <span>
+            </div>
+            <div class="col-md-3">
+                <div class="info_info">
+                    <h5>
+                        Contact Us
+                    </h5>
+                </div>
+                <div class="info_contact">
+                    <a href="" class="">
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        <span>
                                 Ruaka,Nairobi-Kenya
                             </span>
-                        </a>
-                        <a href="" class="">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                            <span>
+                    </a>
+                    <a href="" class="">
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <span>
                                 Call : +25472655809
                             </span>
-                        </a>
-                        <a href="" class="">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
-                            <span>
+                    </a>
+                    <a href="" class="">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <span>
                                 allserve2024@gmail.com
                             </span>
-                        </a>
-                    </div>
+                    </a>
                 </div>
-                <div class="col-md-3">
-                    <div class="info_form ">
-                        <h5>
-                            Newsletter
-                        </h5>
-                        <form action="#">
-                            <input type="email" placeholder="Enter your email">
-                            <button>
-                                Subscribe
-                            </button>
-                        </form>
-                        <div class="social_box">
-                            <a href="">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa fa-youtube" aria-hidden="true"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
-                            </a>
-                        </div>
+            </div>
+            <div class="col-md-3">
+                <div class="info_form ">
+                    <h5>
+                        Newsletter
+                    </h5>
+                    <form action="#">
+                        <input type="email" placeholder="Enter your email">
+                        <button>
+                            Subscribe
+                        </button>
+                    </form>
+                    <div class="social_box">
+                        <a href="">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <footer class="container-fluid footer_section">
-        <p>
-            <span id="currentYear"></span> All Rights Reserved.
-        </p>
-    </footer>
+<footer class="container-fluid footer_section">
+    <p>
+        <span id="currentYear"></span> All Rights Reserved.
+    </p>
+</footer>
 
-    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
-    {% block extra_js %}{% endblock %}
-    {% block js %}{% endblock %}
+<script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.js' %}"></script>
+<script src="{% static 'js/custom.js' %}"></script>
+{% block extra_js %}{% endblock %}
+{% block js %}{% endblock %}
 </body>
 </html>
